--- a/PTi1MenaxhimiDepos/Administration/Role.en.resx
+++ b/PTi1MenaxhimiDepos/Administration/Role.en.resx
@@ -117,46 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="label6.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="label6.Location" type="System.Drawing.Point, System.Drawing">
-    <value>112, 104</value>
+  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>104, 24</value>
   </data>
-  <data name="label6.Size" type="System.Drawing.Size, System.Drawing">
-    <value>27, 24</value>
-  </data>
-  <data name="label6.Text" xml:space="preserve">
-    <value>ID</value>
-  </data>
-  <data name="txtID.Location" type="System.Drawing.Point, System.Drawing">
-    <value>112, 131</value>
-  </data>
-  <data name="txtname.Location" type="System.Drawing.Point, System.Drawing">
-    <value>422, 131</value>
-  </data>
-  <data name="label1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>422, 104</value>
-  </data>
-  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>61, 24</value>
-  </data>
-  <data name="label1.Text" xml:space="preserve">
-    <value>Name</value>
-  </data>
-  <data name="txtCode.Location" type="System.Drawing.Point, System.Drawing">
-    <value>422, 240</value>
-  </data>
-  <data name="label2.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>422, 213</value>
+  <data name="label3.Text" xml:space="preserve">
+    <value>Description</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
     <value>56, 24</value>
@@ -164,20 +130,11 @@
   <data name="label2.Text" xml:space="preserve">
     <value>Code</value>
   </data>
-  <data name="txtDescription.Location" type="System.Drawing.Point, System.Drawing">
-    <value>108, 240</value>
+  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>61, 24</value>
   </data>
-  <data name="label3.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>108, 213</value>
-  </data>
-  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>104, 24</value>
-  </data>
-  <data name="label3.Text" xml:space="preserve">
-    <value>Description</value>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Name</value>
   </data>
   <data name="btnUpdate.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -274,12 +231,6 @@
         /9eEjXCI/2iMHVAaMmTIkl27dgUR4kQIor6lfE80pqd8TNf/mfBmM5BgTJgmAl8PpHT5yxvRX5Nevf4H
         pumv5h/FHk8AAAAASUVORK5CYII=
 </value>
-  </data>
-  <data name="btnUpdate.Location" type="System.Drawing.Point, System.Drawing">
-    <value>553, 359</value>
-  </data>
-  <data name="btnUpdate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>137, 57</value>
   </data>
   <data name="btnUpdate.Text" xml:space="preserve">
     <value>Update</value>
@@ -395,9 +346,6 @@
         aqJHLELCSxGLKmIsF2YH7jfHY/GooihTNRRmkJj7gWL8F6ak9H+MI9j9nz3Z0QAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnClear.Location" type="System.Drawing.Point, System.Drawing">
-    <value>410, 359</value>
-  </data>
   <data name="btnClear.Text" xml:space="preserve">
     <value>Clear</value>
   </data>
@@ -456,9 +404,6 @@
         AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="btndelete.Location" type="System.Drawing.Point, System.Drawing">
-    <value>553, 297</value>
-  </data>
   <data name="btndelete.Text" xml:space="preserve">
     <value>Delete</value>
   </data>
@@ -510,32 +455,11 @@
         rkJggg==
 </value>
   </data>
-  <data name="btnSave.Location" type="System.Drawing.Point, System.Drawing">
-    <value>553, 359</value>
-  </data>
   <data name="btnSave.Text" xml:space="preserve">
     <value>Save</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="label4.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label4.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft Sans Serif, 10.8pt</value>
-  </data>
-  <data name="label4.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
-  </data>
-  <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>99, 24</value>
-  </data>
-  <data name="label4.Text" xml:space="preserve">
-    <value>Insert Role</value>
-  </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>838, 525</value>
-  </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>Role</value>
   </data>
 </root>
