--- a/PTi1MenaxhimiDepos/Items/UnitList.en.resx
+++ b/PTi1MenaxhimiDepos/Items/UnitList.en.resx
@@ -146,7 +146,7 @@
     <value>Refresh</value>
   </data>
   <data name="btnInsertRole.Text" xml:space="preserve">
-    <value>Insert Category</value>
+    <value>Insert Unit</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
